tests/unit/default/syntax-error/081-add-pk.x.t
---- IN ----
+PK|
---- OUT ----
---- ERR ----
syntax: expected <table-columns-ref> after `+PK` near `|` at position 3 - at line 1
---- EXIT ----
1
